@@ -1,3 +1,5 @@
+2010-03-16 MA Yue <velly.empire@gmail.com>
+    * Add some Nautilus Script
 2010-03-15 MA Yue <velly.empire@gmail.com>
 
     * Add functionality for changing /apps/gnome-power-manager/lock/hibernate
